--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,3 @@
-<<<<<<< HEAD
-.button {
-    position: absolute;
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    justify-content: center;
-
-    top: 50%;
-    bottom: 50%;
-    left: 50%;
-    right: 50%;
-    
-    width: 150px;
-    height: 60px;
-
-
-}
-
-.nav-buttons {
-    background-color: #4CAF50;
-    color: white;
-     border: none;
-
-=======
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -30,10 +5,12 @@ html {
   line-height: 1.6;
   color: #666;
   background: #F6F6F6;
+  
 }
 #app {
   max-width: 1200px;
   margin: 0 auto;
+  
 }
 h1 {
   text-align: center;
@@ -54,11 +31,6 @@ p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
 }
-.button {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
-    text-align: left;
-}
 .container {
   position: relative;
   text-align: center;
@@ -72,7 +44,42 @@ p {
   transform: translate(-50%, -50%);
 }
 .results {
-  font-size: 50px;
+  font-size: 400%;
   font-weight: bold;
->>>>>>> e674ab771af09aa8234f35444ccce0ed7fc51e17
+}
+.buttonleft {
+    position: absolute;
+   left: -150px;
+   top: 50%;
+    border: none;
+    color: green;
+    content: url("images/Larrow.png");
+    width: 200px;
+    height: 200px;
+}
+.buttonright {
+   position: absolute;
+   right: -150px;
+   top: 50%;
+    border: none;
+    color: green;
+    content: url("images/Rarrow.png");
+    width: 200px;
+    height: 200px;
+}
+.buttonrandom {
+  position: absolute;
+  top: 10%;
+  left: 48%;
+  border: solid;
+    color: green;
+    content: url("images/random.jpg");
+    width: 100px;
+    height: 100px;
+}
+.nav-buttons {
+    background-color: #4CAF50;
+    color: white;
+     border: none;
+
 }
