--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,11 @@ p {
      border: none;
 
 }
+
+.frown  {
+  display: block;
+  max-width:230px;
+  max-height:95px;
+  width: auto;
+  height: auto;
+}
