--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,11 @@ p {
   font-size: 3vw;
   font-weight: bold;
   word-wrap: break-word;
+  text-shadow: -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;;
+  
 }
 .buttonleft {
     position: absolute;
