--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -6,12 +5,13 @@ html {
   line-height: 1.6;
   color: #666;
   background: #F6F6F6;
-  
+
 }
+
 #app {
   max-width: 1200px;
   margin: 0 auto;
-  
+
 }
 
 h1 {
@@ -27,16 +27,22 @@ img {
   display: block;
   margin: 1rem auto;
   max-width: 100%;
+  max-height: 800px;
 }
 
 p {
-  padding: 0 2.5rem 2.5rem;
+  /*padding: 0 2.5rem 2.5rem;*/
   margin: 0;
 }
+
 .container {
   position: relative;
+  display: block;
   text-align: center;
   color: #F3DE2C;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 4.5em;
 }
 
 .centered {
@@ -50,60 +56,97 @@ p {
   font-size: 3vw;
   font-weight: bold;
   word-wrap: break-word;
-  text-shadow: -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;;
-  
+  text-shadow: -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
+
 .buttonleft {
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  border: none;
+  color: green;
+  content: url("images/Larrow.png");
+  max-width: 100px;
+  max-height: 100px;
+  width: 5em;
+  height: 5em;
+}
+
+.buttonright {
+  position: absolute;
+  right: -10px;
+  top: 50%;
+  border: none;
+  color: green;
+  content: url("images/Rarrow.png");
+  max-width: 100px;
+  max-height: 100px;
+  width: 5em;
+  height: 5em;
+}
+
+@media (max-width: 1000px) {
+  /* CSS that should be displayed if width is equal to or less than 800px goes here */
+  .buttonleft {
     position: absolute;
-   left: -10%;
-   top: 50%;
+    left: 10%;
+    top: -115px;
     border: none;
     color: green;
     content: url("images/Larrow.png");
     max-width: 100px;
     max-height: 100px;
-    width: 50%;
-    height: 50%;
-}
-.buttonright {
+    width: 5em;
+    height: 5em;
+  }
+  .buttonright {
     position: absolute;
-
-   right: -10%;
-   top: 50%;
+    right: 10%;
+    top: -115px;
     border: none;
     color: green;
     content: url("images/Rarrow.png");
     max-width: 100px;
     max-height: 100px;
-    width: 50%;
-    height: 50%;
+    width: 5em;
+    height: 5em;
+  }
+  .results {
+    font-size: 1.5em;
+    font-weight: bold;
+    word-wrap: break-word;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  }
 }
+
 .buttonrandom {
-    position: absolute;
-  top: 13%;
-  left: 45%;
+  display: inline-block;
   border: solid;
-    color: green;
-    content: url("images/random.jpg");
-    max-width: 100px;
-    max-height: 100px;
-    width: 50%;
-    height: 50%;
+  color: green;
+  content: url("images/random.jpg");
+  max-width: 100px;
+  max-height: 100px;
+  width: 50%;
+  height: 50%;
 }
+
 .nav-buttons {
-    background-color: #4CAF50;
-    color: white;
-     border: none;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
 
 }
 
-.frown  {
+.frown {
   display: block;
-  max-width:230px;
-  max-height:95px;
+  max-width: 230px;
+  max-height: 95px;
   width: auto;
   height: auto;
 }
